- varps updated to latest 221 array length - visible menu options npc updating mask added - NPE fixed in gameobject for tiles - Perils of moon started - Blue Moon Combat Fight finished - added "skully" to home, talk to him to enable loot keys - added loot chest at home to loot your loot keys - blue moon combat area is now multi-way combat